# project_code

./: readme.md
code/pico-tflmicro-main/: CMakeLists.txt  Readme.txt
code/pico-tflmicro-main/examples/magic_wand_ble/: CMakeLists.txt  imu_provider.h  kalman_filter_MPU6050.cpp  main.cpp  main_functions.cpp  main_functions.h
code/pico-tflmicro-main/examples/magic_wand_ble/tusb_hid/: hid_src.cpp  hid_src.h
code/pico-tflmicro-main/examples/previous_uf2/: only_mouse.uf2
code/pico-tflmicro-main/include/ICM42622/: ICM42622.cpp  ICM42622.h
